--- a/mseg-carpool/mseg-carpool.client/package.json
+++ b/mseg-carpool/mseg-carpool.client/package.json
@@ -13,6 +13,9 @@
     "@azure/msal-browser": "^3.17.0",
     "@azure/msal-react": "^2.0.19",
     "@fluentui/react": "^8.118.7",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "lucide-react": "^0.400.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1"
