--- a/mseg-carpool/mseg-carpool.Server/appsettings.json
+++ b/mseg-carpool/mseg-carpool.Server/appsettings.json
@@ -10,5 +10,8 @@
     "Instance": "https://login.microsoftonline.com/",
     "TenantId": "common",
     "ClientId": "00d4e3d9-b642-4875-8a51-f08c2799f053"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=MSI;Initial Catalog=CarPooling;Integrated Security=True;Trust Server Certificate=True"
   }
 }
