--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /.vs/mseg-carpool/FileContentIndex/9c2e3efb-4b67-4af7-95eb-a4d1467a2a4b.vsidx
 /.vs/mseg-carpool/FileContentIndex/f2e5e50b-097d-4e30-9211-5c3e1c9a28e2.vsidx
 /.vs/mseg-carpool/FileContentIndex/e995ba1b-8fbd-4b6d-934e-1bbe4ceab0e9.vsidx
+/.vs/mseg-carpool/FileContentIndex/731b75a5-2d22-4c6e-b9ec-5395d13a4844.vsidx
