--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /.vs/mseg-carpool/FileContentIndex/e995ba1b-8fbd-4b6d-934e-1bbe4ceab0e9.vsidx
 /.vs/mseg-carpool/FileContentIndex/731b75a5-2d22-4c6e-b9ec-5395d13a4844.vsidx
 *.vsidx
+node_modules
