solved merging errors, make the user cannot cancel or delete after two hours , edited sth in front end

--- a/mseg-carpool/mseg-carpool.Server/appsettings.json
+++ b/mseg-carpool/mseg-carpool.Server/appsettings.json
@@ -11,7 +11,7 @@
     "TenantId": "common",
     "ClientId": "00d4e3d9-b642-4875-8a51-f08c2799f053"
   },
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=Yahia;Initial Catalog=carpool;Integrated Security=True;Trust Server Certificate=True"
-  }
+    "ConnectionStrings": {
+        "DefaultConnection": "Data Source=Doha-PC;Initial Catalog=CarPooling;Integrated Security=True;Trust Server Certificate=True"
+    }
 }
