--- a/mseg-carpool/mseg-carpool.Server/appsettings.json
+++ b/mseg-carpool/mseg-carpool.Server/appsettings.json
@@ -12,6 +12,6 @@
     "ClientId": "00d4e3d9-b642-4875-8a51-f08c2799f053"
   },
     "ConnectionStrings": {
-        "DefaultConnection": "Data Source=Doha-PC;Initial Catalog=CarPooling;Integrated Security=True;Trust Server Certificate=True"
+        "DefaultConnection": "Data Source=Youssef;Initial Catalog=CarPooling;Integrated Security=True;Trust Server Certificate=True"
     }
 }
